# Sa2ration

./: README.md  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/xda/sa2ration/: ColorMatrixController.java  CommandController.java  MainActivity.java  NewBootReceiver.java  PersistenceController.java
app/src/main/java/com/xda/sa2ration/automation/: AutomationConditionType.java  AutomationContext.java  AutomationEngine.java  AutomationRule.java
app/src/main/java/com/xda/sa2ration/backend/: BackendCapabilities.java  CapabilityStatus.java  DisplayBackend.java  SurfaceFlingerBackend.java  SurfaceFlingerCapabilities.java  SurfaceFlingerTransactionResolver.java  SurfaceFlingerTransactions.java
app/src/main/java/com/xda/sa2ration/diagnostics/: DetectionEvidence.java
app/src/main/java/com/xda/sa2ration/domain/: BackendRequirement.java  ColorTransformPipeline.java  ColorTransformStage.java  DefaultTransformStages.java  DisplayConfiguration.java  FilterPreset.java  Matrix4.java  StoredApplicationState.java
app/src/main/java/com/xda/sa2ration/lut/: ColorCurve.java  CubeLut3D.java  (+6 more)
app/src/main/res/drawable/: ic_arrow_back.xml  ic_settings.xml  ic_tile_display.xml
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/menu/: main_toolbar.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/values-sw600dp/: dimens.xml
app/src/test/java/com/xda/sa2ration/: ColorMatrixControllerTest.java
companion-module/: README.md  action.sh  customize.sh  module.prop  service.sh  skip_mount  uninstall.sh
companion-module/adapters/: README.md
docs/: ARCHITECTURE.md  COMPANION_MODULE.md  COMPATIBILITY.md  FUNCTIONAL_AUDIT.md  LINUX_ARCHITECTURE.md  LINUX_GPU_PIPELINE.md  LINUX_INSTALLATION_RECOVERY.md  PANEL_DETECTION.md  RECOVERY.md  ROOT_DETECTION.md
linux/: .gitignore  LICENSE  MANIFEST.in  README.md  build-arch-package.sh  pyproject.toml
linux/gpu-effect/: .clang-format  CMakeLists.txt  LICENSE  main.cpp  metadata.json  sa2rationgpueffect.cpp  sa2rationgpueffect.h  sa2rationgpueffect.qrc
linux/gpu-effect/shaders/: sa2ration.frag
linux/native-app/: CMakeLists.txt  gpueffectcontroller.cpp  gpueffectcontroller.h  imguiwidget.cpp  imguiwidget.h  main.cpp  mainwindow.cpp  mainwindow.h
linux/packaging/: PKGBUILD
linux/resources/: io.github.sa2ration.Linux.desktop
linux/src/sa2ration_linux/: __init__.py  __main__.py  command.py  controller.py  daemon.py  edid.py  models.py  profiles.py  ui.py
linux/src/sa2ration_linux/backends/: __init__.py  base.py  ddc.py  gpu.py  kscreen.py  kwin.py  manager.py  xrandr.py
linux/tests/: test_controller.py  test_edid.py  test_gpu.py  test_kscreen.py  test_xrandr.py
(+71 files in other folders)
